Bootstrapping and adding dropdown list.

--- a/ClothBazar.Web/Views/Product/Index.cshtml
+++ b/ClothBazar.Web/Views/Product/Index.cshtml
@@ -1,15 +1,17 @@
 ﻿
-
-<h2>Index</h2>
 @{
     ViewBag.Title = "ProductTable";
 }
-<div id="tableContainer">
+<div class="container">
 
-    @{
-        Html.RenderAction("ProductTable");
-    }
-</div>
-<div id="actionContainer">
+    <div id="tableContainer">
+
+        @{
+            Html.RenderAction("ProductTable");
+        }
+    </div>
+    <div id="actionContainer">
+
+    </div>
 
 </div>
