--- a/ClothBazar.Web/Views/Category/Create.cshtml
+++ b/ClothBazar.Web/Views/Category/Create.cshtml
@@ -12,5 +12,48 @@
     <label >Description</label>
     <input name="Description" />
     <br />
+    <label>Image</label>
+    <input id="ImageURL" name="ImageURL" type="hidden" />
+    <input id="imageUpload" type="file" name="Image" accept=".jpg, .jpeg, .png"  />
+    <div class="thumb">
+        <img id="categoryImage" />
+    </div>
+    
+
     <button type="submit">Save</button>
 </form>
+
+<script>
+    $("#imageUpload").change(function () {
+        //debugger;
+        var element = this;
+        var formData = new FormData();
+
+        var totalFiles = element.files.length;
+
+        for (var i = 0; i < totalFiles; i++) {
+            var file = element.files[i];
+            formData.append("Photo", file); 
+        }
+        $.ajax({
+            type: "POST",
+            url: "/Shared/UploadImage",
+            dataType: "Json",
+            data: formData,
+            processData: false,
+            contentType: false,
+            
+        })
+            .done(function (response) {
+                if (response.Success == true) {
+                    $("#ImageURL").val(response.imageURL);
+                    $("#categoryImage").attr("src", response.imageURL);
+                }
+            })
+            .fail(function (XMLHttpRequest, textStattus, errorThrown) {
+                alert("Fail");
+            })
+               
+            
+    })
+</script>
