--- a/ClothBazar.Web/Views/Product/Create.cshtml
+++ b/ClothBazar.Web/Views/Product/Create.cshtml
@@ -1,21 +1,41 @@
-﻿
+﻿@model List<Category>
 @{
     ViewBag.Title = "Create";
 }
 
 <h2>Create Product</h2>
 
+
 <form id="createProduct">
-    <label>Product Name</label>
-    <input name="Name" />
-    <br />
-    <label>Description</label>
-    <input name="Description" />
-    <br />
-    <label>Product Price</label>
-    <input name="Price" />
-    <button id="saveBtn" type="button">Save</button>
+    <div class="form-group">
+        <label>Category</label>
+        <select class="form-control" name="CategoryID">
+            @foreach (var category in Model)
+            {
+                <option value="@category.ID">@category.Name </option>
+            }
+
+        </select>
+    </div>
+    <div class="form-group">
+        <label>Product Name</label>
+        <input class="form-control" name="Name" />
+    </div>
+    <div class="form-group">
+        <label>Description</label>
+        <input class="form-control" name="Description" />
+    </div>
+    <div class="form-group">
+        <label>Product Price</label>
+        <input class="form-control" name="Price" />
+    </div>
+    <button  id="saveBtn" type="button" class="btn btn-primary">Save</button>
 </form>
+
+
+
+
+
   
 <script>
     
