Product work done.

--- a/ClothBazar.Web/Views/Category/Delete.cshtml
+++ b/ClothBazar.Web/Views/Category/Delete.cshtml
@@ -1,12 +1,15 @@
-﻿@model ClothBazar.Entites.Category
+﻿@model Category
 @{
     ViewBag.Title = "Delete";
 }
 
 <h2>Delete Category</h2>
-<h1>Are you sure to delete this category.</h1>
+
+<h1>Are you sure you want to delete this Category?</h1>
+
 <form method="post">
     <input type="hidden" name="ID" value="@Model.ID" />
-    <button type="submit">Delete</button>
+    <button type="submit">Yes Delete</button>
 </form>
-<a href="~/Views/Category/Index.cshtml">Cancel</a>
+
+<a href="/Index">Cancel</a>
