--- a/ClothBazar.Web/Views/Category/Create.cshtml
+++ b/ClothBazar.Web/Views/Category/Create.cshtml
@@ -1,59 +1,106 @@
-﻿
-@{
-    ViewBag.Title = "Create";
+﻿@{
+				/**/
+
+				ViewBag.Title = "Create";
+
+				var imageURL = "/Content/images/system/placeholder-image.png";
 }
 
 <h2>Create Category</h2>
 
-<form method="post">
-    <label>Name</label>
-    <input name="Name" />
-    <br />
-    <label >Description</label>
-    <input name="Description" />
-    <br />
-    <label>Image</label>
-    <input id="ImageURL" name="ImageURL" type="hidden" />
-    <input id="imageUpload" type="file" name="Image" accept=".jpg, .jpeg, .png"  />
-    <div class="thumb">
-        <img id="categoryImage" />
-    </div>
-    
+<form id="createCategory">
+	<div class="row">
+		<div class="col-md-8">
+			<div class="form-group">
+				<label>Name</label>
+				<input class="form-control" name="Name" />
+			</div>
+			<div class="form-group">
+				<label>Description</label>
+				<input class="form-control" name="Description" />
+			</div>
+			<div class="form-group">
+				<label>Image</label>
+				<input type="hidden" id="ImageURL" name="ImageURL" />
+				<input class="form-control" id="imageUpload" name="Image" type="file" accept=".png, .jpg" />
+			</div>
+			<div class="form-group">
+				<label>Is Featured?</label>
+				<div class="input-group">
+					<div class="radio form-control">
+						<label><input name="isFeatured" type="radio" value="True" /> True</label>
+					</div>
+					<div class="radio form-control">
+						<label><input name="isFeatured" type="radio" value="False" /> False</label>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="col-md-4">
+			<div class="thumb">
+				<img class="img-thumbnail img-fluid" id="categoryImage" src="@imageURL" />
+			</div>
+		</div>
+	</div>
 
-    <button type="submit">Save</button>
+	<button id="saveBtn" type="button" class="btn btn-primary">Save</button>
+	<button id="cancelBtn" type="button" class="btn btn-primary">Cancel</button>
 </form>
 
 <script>
-    $("#imageUpload").change(function () {
-        //debugger;
-        var element = this;
-        var formData = new FormData();
+	$("#imageUpload").change(function () {
+		var element = this;
 
-        var totalFiles = element.files.length;
+		var formData = new FormData();
 
-        for (var i = 0; i < totalFiles; i++) {
-            var file = element.files[i];
-            formData.append("Photo", file); 
-        }
-        $.ajax({
-            type: "POST",
-            url: "/Shared/UploadImage",
-            dataType: "Json",
-            data: formData,
-            processData: false,
-            contentType: false,
-            
-        })
-            .done(function (response) {
-                if (response.Success == true) {
-                    $("#ImageURL").val(response.imageURL);
-                    $("#categoryImage").attr("src", response.imageURL);
-                }
-            })
-            .fail(function (XMLHttpRequest, textStattus, errorThrown) {
-                alert("Fail");
-            })
-               
-            
-    })
+		var totalFiles = element.files.length;
+
+		for (var i = 0; i < totalFiles; i++) {
+			var file = element.files[i];
+			formData.append("Photo", file);
+		}
+
+		$.ajax({
+			type: 'POST',
+			url: '@Url.Action("UploadImage", "Shared")',
+			dataType: 'json',
+			data: formData,
+			contentType: false,
+			processData: false
+		})
+		.done(function (response) {
+			console.log(response);
+
+			if(response.Success)
+			{
+				$("#ImageURL").val(response.ImageURL);
+				$("#categoryImage").attr("src", response.ImageURL);
+			}
+		})
+		.fail(function (XMLHttpRequest, textStatus, errorThrown) {
+			alert("FAIL");
+		});
+	});
+
+	$("#saveBtn").click(function () {
+		$.ajax({
+			type: 'POST',
+			url: '@Url.Action("Create", "Category")',
+			data: $("#createCategory").serialize()
+		})
+		.done(function (response) {
+			$("#tableContiner").html(response);
+			$("#actionContainer").html("");
+			focusAction("tableContiner");
+		})
+		.fail(function (XMLHttpRequest, textStatus, errorThrown) {
+			alert("FAIL");
+		});
+	});
+
+	$("#cancelBtn").click(function () {
+		$("#actionContainer").html("");
+
+		focusAction("tableContiner");
+	});
 </script>
