--- a/ClothBazar.Web/Views/Category/Index.cshtml
+++ b/ClothBazar.Web/Views/Category/Index.cshtml
@@ -1,12 +1,39 @@
-﻿@model List<ClothBazar.Entites.Category>
+﻿
 @{
-    ViewBag.Title = "Index";
+                /**/
+
+                ViewBag.Title = "Categories";
 }
 
-<h2>Index</h2>
+<section class="flat-row flat-iconbox">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="title-section">
+                    <h2 class="title">
+                        Categories
+                    </h2>
+                </div>
+            </div>
+        </div>
+        <div id="tableContiner">
+            @{
+                Html.RenderAction("CategoryTable");
+            }
+        </div>
 
-@foreach(var category in Model)
-{
-<h1>@category.Name</h1>
-}
+        <hr />
+        <div id="actionContainer">
 
+        </div>
+    </div>
+</section>
+
+
+<script>
+    function focusAction(controlToFocus) {
+        $('html, body').animate({
+            scrollTop: $("#" + controlToFocus).offset().top - 100
+        }, 1000);
+    }
+</script>
