--- a/ClothBazar.Web/Views/Home/Index.cshtml
+++ b/ClothBazar.Web/Views/Home/Index.cshtml
@@ -1,8 +1,12 @@
-﻿@model ClothBazar.Web.ViewModel.HomeViewModel
+﻿@model ClothBazar.Web.ViewModels.HomeViewModel
 @{
     ViewBag.Title = "Home Page";
 
-    var firstCategory = Model.categories.Where(category => category.ImageURL != null).First();
+    var firstCategory = Model.FeaturedCategories[0];
+    var secondCategory = Model.FeaturedCategories[1];
+    var thirdCategory = Model.FeaturedCategories[2];
+    //var fourthCategory = Model.FeaturedCategories[3];
+   
 }
 
 <!-- SLIDER -->
@@ -191,13 +195,17 @@
                 <div class="flat-image-box style-1 data-effect div-h22 clearfix">
                     <div class="item data-effect-item">
                         <div class="inner">
-                            <div class="thumb">
-                                <img src="@firstCategory.ImageURL" alt="Image">
-                                <div class="elm-btn">
-                                    <a href="#" class="themesflat-button bg-white width-150">@firstCategory.Name</a>
+                            @if (firstCategory != null)
+                            {
+                                <div class="thumb">
+                                    <img src="@firstCategory.ImageURL" alt="Image">
+                                    <div class="elm-btn">
+                                        <a href="#" class="themesflat-button bg-white width-150">@firstCategory.Name</a>
+                                    </div>
+                                    <div class="overlay-effect bg-color-1"></div>
                                 </div>
-                                <div class="overlay-effect bg-color-1"></div>
-                            </div>
+                            }
+
                         </div>
                     </div>
                 </div>
@@ -205,45 +213,40 @@
             <div class="col-sm-6 col-md-4">
                 <div class="flat-image-box style-1 row2 data-effect clearfix">
                     <div class="item data-effect-item">
+
                         <div class="inner">
+                            @if(secondCategory != null)
+                            {
                             <div class="thumb">
-                                <img src="~/Content/images/image-box/imgbox-1-375x240.jpg" alt="Image">
+                                <img src="@secondCategory.ImageURL" alt="Image">
                                 <div class="elm-btn">
-                                    <a href="#" class="themesflat-button bg-white width-150">For Kid’s</a>
+                                    <a href="#" class="themesflat-button bg-white width-150">@secondCategory.Name</a>
                                 </div>
                                 <div class="overlay-effect bg-color-1"></div>
                             </div>
+                            }
+                            
                         </div>
                     </div>
 
                     <div class="item data-effect-item">
                         <div class="inner">
-                            <div class="thumb">
-                                <img src="~/Content/images/image-box/imgbox-2-375x240.jpg" alt="Image">
-                                <div class="elm-btn">
-                                    <a href="#" class="themesflat-button bg-white width-150">accessories</a>
+                            @if (thirdCategory != null)
+                            {
+                                <div class="thumb">
+                                    <img src="@thirdCategory.ImageURL" alt="Image">
+                                    <div class="elm-btn">
+                                        <a href="#" class="themesflat-button bg-white width-150">@thirdCategory.Name</a>
+                                    </div>
+                                    <div class="overlay-effect bg-color-1"></div>
                                 </div>
-                                <div class="overlay-effect bg-color-1"></div>
-                            </div>
+                            }
+
                         </div>
                     </div>
                 </div>
             </div><!-- /.col-md-4 -->
-            <div class="col-sm-6 col-md-4">
-                <div class="flat-image-box style-1 data-effect div-h20 clearfix">
-                    <div class="item data-effect-item">
-                        <div class="inner">
-                            <div class="thumb">
-                                <img src="~/Content/images/image-box/imgbox-2-375x500.jpg" alt="Image">
-                                <div class="elm-btn">
-                                    <a href="#" class="themesflat-button bg-white width-150">For woMen’s</a>
-                                </div>
-                                <div class="overlay-effect bg-color-1"></div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div><!-- /.col-md-4 -->
+           
         </div><!-- /.row -->
     </div><!-- /.container -->
 </section>
