--- a/ClothBazar.Web/Views/Product/ProductTable.cshtml
+++ b/ClothBazar.Web/Views/Product/ProductTable.cshtml
@@ -1,146 +1,240 @@
-﻿@model List<Product>
+﻿@model ProductSearchViewModel
 @{
-    ViewBag.Title = "ProductTable";
+	ViewBag.Title = "ProductTable";
 }
 
-<div>
-    <form method="post">
-        <div class="row">
-            <div class="col-md-8">
-                <div class="form-group">
-                    <label>Search</label>
-                    <input class="form-control" id="searchTxt" name="search" />
 
-                </div>
-            </div>
-           
-            <div class="col-md-4">
-                <div class="form-group">
-                    <label>Action</label>
-                    <div class="row">
-                        <div class="col-md-6">
-                            <button class="btn btn-primary form-control" type="button" id="searchBtn">Search</button>
-                        </div>
-                        <div class="col-md-6">
-                            <button class="btn btn-primary form-control" type="button" id="newBtn">New</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </form>
+<link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css">
+<script src="//cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
+
+<div>
+	<form method="post">
+		<div class="row">
+			<div class="col-md-8">
+				<div class="form-group">
+					<label>Search</label>
+					<input class="form-control" id="searchTxt" name="Search" value="@Model.SearchTerm" />
+				</div>
+			</div>
+			<div class="col-md-4">
+				<div class="form-group">
+					<label>Action</label>
+					<div class="row">
+						<div class="col-md-4 pr-0">
+							<button class="btn btn-primary form-control" type="button" id="searchBtn">Search</button>
+						</div>
+						<div class="col-md-4 pr-0">
+							<button class="btn btn-primary form-control" type="button" id="resetBtn">Reset</button>
+						</div>
+						<div class="col-md-4 pr-0">
+							<button class="btn btn-primary form-control" type="button" id="newBtn">New</button>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</form>
 </div>
 
-<table class="table table-striped">
+<div>
+	<table id="ProductsTable" class="table table-striped">
+		<thead>
+			<tr>
+				<th class="font-weight-bold">Product Name</th>
+				<th class="font-weight-bold">Category</th>
+				<th class="font-weight-bold">Price</th>
+				<th class="font-weight-bold wrap-td">Actions</th>
+			</tr>
+		</thead>
+		<tbody>
+			@if (Model.Products != null && Model.Products.Count > 0)
+			{
 
-    <thead>
-        <tr>
-            <td>Product Name</td>
-            <td>Category</td>
-            <td>Price</td>
-            <td>Action</td>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var product in Model)
-        {
-            <tr>
-                <td>@product.Name</td>
-                <td>
-                    @if (product.Category != null)
-                    {
-                        <text>@product.Category.Name</text>
-                    }
-                    else
-                    {
-                        <text>-</text>
-                    }
+				foreach (var product in Model.Products)
+				{
+					<tr>
+						<td>@product.Name</td>
+						<td>
+							@if (product.Category != null)
+							{
+								<text>@product.Category.Name</text>
+							}
+							else
+							{
+								<text>-</text>
+							}
+						</td>
+						<td>@product.Price</td>
+						<td class="wrap-td">
+							<button class="editBtn" data-id="@product.ID">Edit</button>
+							<button class="deleteBtn" data-id="@product.ID">Delete</button>
+							<button class="addtoCart" data-id="@product.ID">Add To Cart</button>
+						</td>
+					</tr>
+				}
+			}
+			else
+			{
+				<tr>
+					<td class="text-danger" colspan="4">No Products found.</td>
+				</tr>
+			}
+		</tbody>
+	</table>
+	<div>
+		@*@if (Model.PageNo != 1)
+			{
+				<button class="pageButtons" data-pageNo="@(Model.PageNo - 1)">Previous</button>
+			}
 
-                </td>
-                <td>@product.Price</td>
-
-                <td>
-                    <button class="editBtn" data-id="@product.ID">Edit</button>
-                    <button class="deleteBtn" data-id="@product.ID">Delete</button>
-                </td>
-            </tr>
-        }
-    </tbody>
-</table>
-<hr />
-
-
+			<button class="pageButtons" data-pageNo="@(Model.PageNo + 1)">Next</button>*@
+	</div>
+</div>
 
 <script>
-    $("#searchBtn").click(function () {
-        var searchValue = $("#searchTxt").val();
 
-        $.ajax({
-            url: "/Product/ProductTable",
-            data: {
-                search: searchValue
-            }
+	$('#ProductsTable').DataTable();
 
-        })
-            .done(function (response) {
-                $("#tableContainer").html(response);
-            })
-            .fail(function (XMLHttpRequest, textStatus, errorThrown) {
-                alert("fail");
-            })
-    });
+	$(".pageButtons").click(function () {
+		$.ajax({
+			url: '@Url.Action("ProductTable", "Product")',
+			data: {
+				pageNo : $(this).attr("data-pageNo")
+			}
+		})
+		.done(function (response) {
+			$("#tableContiner").html(response);
+		})
+		.fail(function (XMLHttpRequest, textStatus, errorThrown) {
+			alert("FAIL");
+		});
+	});
 
-    $("#newBtn").click(function () {
+	$("#searchBtn").click(function () {
+		var searchValue = $("#searchTxt").val();
 
+		$.ajax({
+			url: '@Url.Action("ProductTable", "Product")',
+			data: {
+				search: searchValue
+			}
+		})
+		.done(function (response) {
+			$("#tableContiner").html(response);
+		})
+		.fail(function (XMLHttpRequest, textStatus, errorThrown) {
+			alert("FAIL");
+		});
+	});
 
-        $.ajax({
-            url: "/Product/Create"
+	$("#resetBtn").click(function () {
+		var searchValue = '';
 
-        })
-            .done(function (response) {
-                $("#actionContainer").html(response);
-            })
-            .fail(function (XMLHttpRequest, textStatus, errorThrown) {
-                alert("fail");
-            })
-    });
+		$.ajax({
+			url: '@Url.Action("ProductTable", "Product")',
+			data: {
+				search: searchValue
+			}
+		})
+		.done(function (response) {
+			$("#tableContiner").html(response);
+		})
+		.fail(function (XMLHttpRequest, textStatus, errorThrown) {
+			alert("FAIL");
+		});
+	});
 
-    $(".editBtn").click(function () {
-        $.ajax({
-            url: "/Product/Edit",
-            data: {
-                ID: $(this).attr("data-id")
-            }
+	$("#newBtn").click(function () {
+		$.ajax({
+			url: '@Url.Action("Create", "Product")',
+		})
+		.done(function (response) {
+			$("#actionContainer").html(response);
 
-        })
-            .done(function (response) {
-                $("#actionContainer").html(response);
-            })
-            .fail(function (XMLHttpRequest, textStatus, errorThrown) {
-                alert("fail");
-            })
-    });
+			focusAction("actionContainer");
+		})
+		.fail(function (XMLHttpRequest, textStatus, errorThrown) {
+			alert("FAIL");
+		});
+	});
 
-    $(".deleteBtn").click(function () {
+	$(".editBtn").click(function () {
+		$.ajax({
+			url: '@Url.Action("Edit", "Product")',
+			data: {
+				ID: $(this).attr('data-id')
+			}
+		})
+		.done(function (response) {
+			$("#actionContainer").html(response);
 
-        var confirmDelete = confirm("Are you sure to delete this product.");
-        if (confirmDelete) {
+			focusAction("actionContainer");
+		})
+		.fail(function (XMLHttpRequest, textStatus, errorThrown) {
+			alert("FAIL");
+		});
+	});
 
-            $.ajax({
-                type: "POST",
-                url: "/Product/Delete",
-                data: {
-                    ID: $(this).attr("data-id")
-                }
+	$(".deleteBtn").click(function () {
 
-            })
-                .done(function (response) {
-                    $("#tableContainer").html(response);
-                })
-                .fail(function (XMLHttpRequest, textStatus, errorThrown) {
-                    alert("fail");
-                })
-        }
-    });
+		swal({
+			title: "Confirm?",
+			text: "Are you sure you want to delete this product?",
+			icon: "warning",
+			buttons: true,
+			dangerMode: true,
+		})
+		.then((willDelete) => {
+			if (willDelete) {
+				$.ajax({
+					type: 'POST',
+					url: '@Url.Action("Delete", "Product")',
+					data: {
+						ID: $(this).attr('data-id')
+					}
+				})
+				.done(function (response) {
+					$("#tableContiner").html(response);
+
+					swal("Record deleted Successfully.", {
+						icon: "success",
+					});
+				})
+				.fail(function (XMLHttpRequest, textStatus, errorThrown) {
+					alert("FAIL");
+				});
+
+			}
+		});
+
+		//var confirmDelete = confirm("Are you sure you want to delete this product?");
+
+		//if (confirmDelete)
+		//{
+		//	$.ajax({
+		//		type: 'POST',
+		//		url: '/Product/Delete',
+		//		data: {
+		//			ID: $(this).attr('data-id')
+		//		}
+		//	})
+		//	.done(function (response) {
+		//		$("#tableContiner").html(response);
+		//	})
+		//	.fail(function (XMLHttpRequest, textStatus, errorThrown) {
+		//		alert("FAIL");
+		//	});
+		//}
+	});
+
+	var products = [];
+	$(".addtoCart").click(function () {
+		var productID = $(this).attr('data-id');
+
+		products.push(productID);
+
+		$.cookie('CartProducts', products.join('-'), { path: '/' });
+
+		alert("Product added to Cart.");
+	});
 </script>
-
